updated the readme file

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,11 @@
 
                 <h3>API (Tweets, Songs, Movies)</h3>
             </div>
+            <div class="work">
+                <a href="https://teeterjm58.github.io/Nodejs-and-MySQL/"><img src="assets/images/BAmazon-640-480.png" alt="BAmazon Shopping"></a>
 
+                <h3>BAmazon Store</h3>
+            </div>
         </section>
 
         <section class="sidebar">
