Added Friend Finder to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,11 @@
 
                 <h3>BAmazon Store</h3>
             </div>
+            <div class="work">
+                <a href="https://protected-taiga-32100.herokuapp.com/"><img src="assets/images/FriendFinder-640-480.png" alt="Friend Finder"></a>
+
+                <h3>Friend Finder</h3>
+            </div>
         </section>
 
         <section class="sidebar">
